--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@1,100&family=Lora&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -76,6 +76,10 @@ body {
 .date {
   /* font-family: "Poetsen One", sans-serif; */
   font-family: "Sedan SC", serif;
+}
+
+.dashboard_schedule {
+  font-family: "Lora", serif;
 }
 
 /* ----------------------------------------------------- */
