--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,9 @@ body {
 .dashboard_schedule {
   font-family: "Lora", serif;
 }
+/* *************************************************** */
 
+/* ************* Input Form styling *************** */
 .p-inputnumber {
   margin-top: 5px;
   border-radius: 4px;
@@ -120,6 +122,7 @@ body {
   border-bottom-right-radius: 4px;
   /* border-bottom-left-radius: 4px; */
 }
+/* ************************************************** */
 
 
 /* ----------------------------------------------------- */
